# kagenti

./: .gitignore  .trivyignore  CLAUDE-ORG.md  CLAUDE.md  CONTRIBUTOR_LADDER.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  PERSONAS_AND_ROLES.md  README.md  SECURITY.md
.claude/commands/: commit.md
.github/: dependabot.yml
.github/workflows/: build-hypershift-ci-image.yaml  build.yaml  ci.yaml  cleanup-stale-hypershift-clusters.yaml  docs-ci.yaml  e2e-hypershift-pr.yaml  e2e-hypershift.yaml  e2e-kind-pr.yaml  e2e-kind.yaml  e2e-openshell-hypershift.yaml  e2e-openshell-kind.yaml  scorecard.yaml  security-post-merge.yaml  security-scans.yaml
charts/kagenti/: Chart.yaml  values.yaml
charts/kagenti-deps/: values.yaml
charts/openshell/: Chart.yaml  values.yaml
deployments/ansible/: README.md
deployments/envs/: dev_values.yaml  dev_values_openshell.yaml  ocp_ci_values.yaml  ocp_minimal_values.yaml  ocp_values.yaml
deployments/openshell/: README.md  agent-sandbox-crd.yaml  gateway.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  tls-secrets.yaml
deployments/sandbox/: llm-budget-proxy.yaml
deployments/scripts/: README.md  preflight-check.sh
docs/: components.md  dev-guide.md  gateway.md  identity-guide.md  install.md  release-sop.md  releasing.md  sandbox-guide.md  troubleshooting.md
kagenti/: .dockerignore
kagenti/backend/: Dockerfile  pyproject.toml
kagenti/backend/app/: main.py
kagenti/backend/app/core/: config.py  constants.py
kagenti/backend/app/routers/: agents.py  chat.py  config.py  lineage.py  shipwright.py  skills.py  tools.py
kagenti/backend/app/services/: kubernetes.py  reconciliation.py
kagenti/backend/app/utils/: routes.py
kagenti/backend/tests/: test_authbridge_runtime_config.py  test_chat_stream_401.py  test_routes.py  test_skills.py  test_tool_workloads.py
(+223 files in other folders)
