[project]
name = "kagenti-backend"
version = "0.1.0"
description = "Kagenti UI Backend API"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Kagenti Contributors" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "kubernetes>=31.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "a2a-sdk>=0.2.0",
    "mcp>=1.0.0",
    "asyncpg>=0.30.0",
    # cryptography 47+ crashes with SIGILL on ARM64 Kind clusters
    "cryptography<47",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pylint>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (idiomatic FastAPI Depends())
    "B904",   # raise from within except (too noisy for existing code)
    "N815",   # mixedCase variable in class scope (Pydantic models match API schemas)
    "F401",   # unused imports (to be cleaned up incrementally)
    "I001",   # import sorting (handled by ruff-format in pre-commit)
    "E402",   # module-level import not at top (conditional imports)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 0

